# Spirytus

./: .clang-format  CMakeLists.txt  README.md
Resources/: resource.rc
Spirytus/: CMakeLists.txt  Spirytus.cpp  Spirytus.h
src/: App.cpp  App.hpp  Spirytus.cpp  SpirytusException.cpp  SpirytusException.hpp  SpirytusTimer.cpp  SpirytusTimer.hpp  SpirytusWin.hpp  WinMain.cpp  Window.cpp  Window.hpp
src/Graphics/: Graphics.cpp  Graphics.hpp
src/Input/Keyboard/: Keyboard.cpp
src/Input/Mouse/: Mouse.cpp  Mouse.hpp
src/MSVC/: resource.rc
src/Platform/Window/: window.cpp  window.hpp
src/Window/: window.cpp  window.hpp
src/Window/Input/Keyboard/: Keyboard.hpp
src/Window/Input/Mouse/: Mouse.cpp  Mouse.hpp
src/Windows/: SpyritusWin.hpp
